os-files/kustomize/env/aws/sysint/routes/sba-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sba
spec:
  host: sba-sysint.apps.ocp4.innovateuk.ukri.org
  port:
    targetPort: 7443-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sba
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: sba-sysint.apps.ocp4.innovateuk.ukri.org
      routerName: router
